--- a/src/index.hbs
+++ b/src/index.hbs
@@ -1,9 +1,13 @@
+<!DOCTYPE html>
 <html>
   <head>
     {{> meta}}
   </head>
   <body>
-    <div class="bg"></div>
+    <div id="bg"></div>
+
+    <div class="ground"></div>
+
     <div id="speaker_title">
       フル SVG サイトを一人で作ったよ 
     </div>
@@ -13,6 +17,7 @@
       </div>
       <img src="images/speaker.png" alt="">
     </div>
+
     <div id="close_left"></div>
     <div id="close_right"></div>
     
@@ -22,10 +27,6 @@
     </div>
 
     <div class="audience_wrap">
-
-      <div class="audience pos_1">
-        <img src="images/man.png" alt="">
-      </div>
 
     </div>
   </body>
