--- a/src/_partials/meta.hbs
+++ b/src/_partials/meta.hbs
@@ -3,4 +3,4 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 <title>LT君</title>
 <link rel="stylesheet" href="./css/style.css">
-<script src="./js/.js"></script>
+<script src="./js/app.js"></script>
