--- a/theme-sources/2014-12/src/css/style.styl
+++ b/theme-sources/2014-12/src/css/style.styl
@@ -145,6 +145,7 @@ body,html
   border-top 2px #ccc solid
 
 #close_left,#close_right
+  transition: left 1s linear, right 1s linear
   position: absolute
   top: 0
   width: 52%
