--- a/theme-sources/2014-12/src/css/style.styl
+++ b/theme-sources/2014-12/src/css/style.styl
@@ -1,7 +1,6 @@
 @import "nib";
 
 @import "libs/utils";
-@import "libs/fontface";
 @import "libs/normalize";
 
 html
@@ -57,7 +56,7 @@ body,html
   top: 3%
   text-align: center
   fset(32,12)
-  font-family: 'kanyutei'
+  font-family: 'Kanteiryu'
   box-shadow: 0 0 10px 10px rgba(0,0,0,0.6);
 
 
@@ -105,7 +104,7 @@ body,html
     -o-writing-mode: vertical-rl;
     -webkit-writing-mode: vertical-rl;
     fset(32,32)
-    font-family: 'kanyutei'
+    font-family: 'Kanteiryu'
     background: #fff
     -webkit-transform: rotate(0deg)
   &:before
@@ -183,7 +182,7 @@ body,html
 .msg
   padding: 20px
   position: absolute
-  width: 200px
+  max-width: 200px
   border-radius: 10px
   background: rgba(255,255,255,0.92)
   box-shadow: rgba(0,0,0,0.2) 0 0 20px 2px
