時間表示を加える

--- a/theme-sources/2014-12/src/css/style.styl
+++ b/theme-sources/2014-12/src/css/style.styl
@@ -375,3 +375,12 @@ body,html
     text-shadow: 0 0 100px rgba(0,255,0,1)
   100%
     text-shadow: 0 0 100px rgba(0,255,0,1)
+
+#until
+  position: absolute
+  top: 10px
+  left: 10px
+  z-index: 10000
+  text-shadow: 0 0 4px rgba(0,0,0,1)
+  color: #fff
+  fset(22,24)
